--- a/.github/workflows/benchmark-call.yml
+++ b/.github/workflows/benchmark-call.yml
@@ -7,16 +7,11 @@ on:
         type: string
         required: true
         description: The name of the benchmark to run
-      family:
+      runner:
         type: string
         required: false
-        description: The family of runner to start ({m,c}7{a,g,i}.{2,4,8,12,16}xlarge for CPU, g6.{2,4,8}xlarge for GPU)
-        default: c7g.16xlarge
-      image:
-        type: string
-        required: false
-        description: The runner image (ubuntu24-{full,gpu}-{arm64,x64} for CPU, ubuntu24-gpu-x64 for GPU)
-        default: ubuntu24-full-arm64
+        description: Runner config as JSON, use {"family":"g6.2xlarge","image":"ubuntu24-gpu-x64"} for GPU
+        default: '{"family":"c7g.16xlarge","image":"ubuntu24-full-arm64"}'
       memory_allocator:
         type: string
         required: false
@@ -65,16 +60,11 @@ on:
         type: string
         required: true
         description: The id of the benchmark to run, must be unique within matrix
-      family:
+      runner:
         type: string
         required: false
-        description: The family of runner to start ({m,c}7{a,g,i}.{2,4,8,12,16}xlarge for CPU, g6.{2,4,8,12,16}xlarge for GPU)
-        default: c7g.16xlarge
-      image:
-        type: string
-        required: false
-        description: The runner image (ubuntu24-{full,gpu}-{arm64,x64} for CPU, ubuntu24-gpu-x64 for GPU)
-        default: ubuntu24-full-arm64
+        description: Runner config as JSON, use {"family":"g6.2xlarge","image":"ubuntu24-gpu-x64"} for GPU
+        default: '{"family":"c7g.16xlarge","image":"ubuntu24-full-arm64"}'
       memory_allocator:
         type: string
         required: false
@@ -129,8 +119,8 @@ jobs:
     name: Run benchmark on workflow ref/branch
     runs-on:
       - runs-on
-      - family=${{ inputs.family }}
-      - image=${{ inputs.image }}
+      - ${{ format('family={0}', fromJSON(inputs.runner).family) }}
+      - ${{ format('image={0}', fromJSON(inputs.runner).image) }}
       - run-id=${{ github.run_id }}
       - tag=bench-${{ inputs.benchmark_name }}-${{ github.run_id }}-${{ github.run_number }}-${{ github.run_attempt }}
       - extras=s3-cache
