--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -106,8 +106,7 @@ jobs:
                   e2e_bench: $e2e_bench,
                   features: ($features | gsub("^,|,$"; "")),
                   id: $id,
-                  family: (.cpu_family // "c7g.16xlarge"),
-                  image: "ubuntu24-full-arm64",
+                  runner: .cpu_runner,
                   memory_allocator: .memory_allocator,
                   app_log_blowup: .app_log_blowup,
                   leaf_log_blowup: .leaf_log_blowup,
@@ -123,8 +122,7 @@ jobs:
                     | if $f == "" then "cuda" else "cuda,\($f)" end
                   ),
                   id: "\($id)-cuda", 
-                  family: (.gpu_family // "g6.2xlarge"),
-                  image: "ubuntu24-gpu-x64",
+                  runner: .gpu_runner,
                   memory_allocator: .memory_allocator,
                   app_log_blowup: .app_log_blowup,
                   leaf_log_blowup: .leaf_log_blowup,
@@ -150,8 +148,7 @@ jobs:
     with:
       benchmark_name: ${{ matrix.benchmark_run.name }}
       benchmark_id: ${{ matrix.benchmark_run.id }}
-      family: ${{ matrix.benchmark_run.family }}
-      image: ${{ matrix.benchmark_run.image }}
+      runner: ${{ matrix.benchmark_run.runner }}
       memory_allocator: ${{ matrix.benchmark_run.memory_allocator }}
       app_log_blowup: ${{ matrix.benchmark_run.app_log_blowup }}
       leaf_log_blowup: ${{ matrix.benchmark_run.leaf_log_blowup }}
