--- a/guest-libs/keccak256/Cargo.toml
+++ b/guest-libs/keccak256/Cargo.toml
@@ -27,4 +27,7 @@ eyre = { workspace = true }
 tiny-keccak = { workspace = true }
 
 [features]
-cuda = ["openvm-keccak256-circuit/cuda"]
+cuda = [
+    "openvm-circuit/cuda",
+    "openvm-keccak256-circuit/cuda"
+]
