--- a/guest-libs/p256/Cargo.toml
+++ b/guest-libs/p256/Cargo.toml
@@ -39,6 +39,7 @@ openvm-toolchain-tests.workspace = true
 
 openvm-stark-backend.workspace = true
 openvm-stark-sdk.workspace = true
+openvm-cuda-backend = { workspace = true, optional = true }
 
 rand = { workspace = true }
 serde.workspace = true
@@ -49,7 +50,12 @@ derive_more = { workspace = true, features = ["from"] }
 default = ["ecdsa"]
 alloc = ["ecdsa-core?/alloc", "elliptic-curve/alloc"]
 std = ["alloc", "ecdsa-core?/std", "elliptic-curve/std", "openvm-ecc-guest/std"]
-
+cuda = [
+    "openvm-circuit/cuda",
+    "openvm-ecc-circuit/cuda",
+    "openvm-sha256-circuit/cuda",
+    "dep:openvm-cuda-backend",
+]
 arithmetic = ["elliptic-curve/arithmetic"]
 bits = ["arithmetic", "elliptic-curve/bits"]
 digest = ["ecdsa-core/digest", "ecdsa-core/hazmat"]
