--- a/guest-libs/k256/Cargo.toml
+++ b/guest-libs/k256/Cargo.toml
@@ -17,6 +17,7 @@ openvm-algebra-guest = { workspace = true }
 openvm-algebra-moduli-macros = { workspace = true }
 openvm-ecc-guest = { workspace = true }
 openvm-ecc-sw-macros = { workspace = true }
+openvm-cuda-backend = { workspace = true, optional = true }
 
 once_cell = { workspace = true, optional = true }
 elliptic-curve = { workspace = true }
@@ -62,6 +63,7 @@ cuda = [
     "openvm-circuit/cuda",
     "openvm-ecc-circuit/cuda",
     "openvm-sha256-circuit/cuda",
+    "dep:openvm-cuda-backend",
 ]
 arithmetic = ["elliptic-curve/arithmetic"]
 bits = ["arithmetic", "elliptic-curve/bits"]
