--- a/guest-libs/p256/Cargo.toml
+++ b/guest-libs/p256/Cargo.toml
@@ -17,7 +17,7 @@ openvm-algebra-guest = { workspace = true }
 openvm-algebra-moduli-macros = { workspace = true }
 openvm-ecc-guest = { workspace = true }
 openvm-ecc-sw-macros = { workspace = true }
-
+openvm-cuda-backend = { workspace = true, optional = true }
 elliptic-curve = { workspace = true, features = ["hazmat", "sec1"] }
 ecdsa-core = { version = "0.16.9", package = "ecdsa", optional = true, default-features = false, features = [
     "der",
@@ -54,6 +54,7 @@ cuda = [
     "openvm-circuit/cuda",
     "openvm-ecc-circuit/cuda",
     "openvm-sha256-circuit/cuda",
+    "dep:openvm-cuda-backend",
 ]
 arithmetic = ["elliptic-curve/arithmetic"]
 bits = ["arithmetic", "elliptic-curve/bits"]
