--- a/guest-libs/pairing/Cargo.toml
+++ b/guest-libs/pairing/Cargo.toml
@@ -22,6 +22,7 @@ openvm-algebra-complex-macros = { workspace = true }
 openvm-custom-insn = { workspace = true }
 openvm-rv32im-guest = { workspace = true }
 openvm-pairing-guest = { workspace = true }
+openvm-cuda-backend = { workspace = true, optional = true }
 
 # Used for `halo2curves` feature
 halo2curves-axiom = { workspace = true, optional = true }
@@ -62,6 +63,13 @@ halo2curves = ["bls12_381", "bn254", "dep:halo2curves-axiom"]
 # only enable for the curves you use as it affects the init! macro
 bn254 = ["openvm-pairing-guest/bn254"]
 bls12_381 = ["openvm-pairing-guest/bls12_381"]
+cuda = [
+    "dep:openvm-cuda-backend",
+    "openvm-circuit/cuda",
+    "openvm-algebra-circuit/cuda",
+    "openvm-pairing-circuit/cuda",
+    "openvm-ecc-circuit/cuda",
+]
 
 [package.metadata.cargo-shear]
 ignored = ["openvm", "openvm-custom-insn"]
