--- a/guest-libs/keccak256/Cargo.toml
+++ b/guest-libs/keccak256/Cargo.toml
@@ -27,7 +27,4 @@ eyre = { workspace = true }
 tiny-keccak = { workspace = true }
 
 [features]
-cuda = [
-    "openvm-circuit/cuda",
-    "openvm-keccak256-circuit/cuda"
-]
+cuda = ["openvm-keccak256-circuit/cuda"]
