--- a/.github/workflows/vm.yml
+++ b/.github/workflows/vm.yml
@@ -30,8 +30,8 @@ jobs:
 
     runs-on:
       - runs-on=${{ github.run_id }}
-      - runner=64cpu-linux-arm64
-      - image=ubuntu24-full-arm64
+      - family=${{ matrix.config.family }}
+      - image=${{ matrix.config.image }}
       - extras=s3-cache
 
     steps:
