--- a/.github/workflows/primitives.yml
+++ b/.github/workflows/primitives.yml
@@ -25,14 +25,14 @@ jobs:
   build:
     strategy:
       matrix:
-        config:
-          - { family: "c7g.8xlarge", image: "ubuntu24-full-arm64" }
-          - { family: "g6.xlarge", image: "ubuntu24-gpu-x64" }
+        platform:
+          - { runner: "64cpu-linux-arm64", image: "ubuntu24-full-arm64" }
+          - { runner: "test-gpu-nvidia", image: "ubuntu24-gpu-x64" }
 
     runs-on:
       - runs-on=${{ github.run_id }}
-      - family=${{ matrix.config.family }}
-      - image=${{ matrix.config.image }}
+      - runner=${{ matrix.platform.runner }}
+      - image=${{ matrix.platform.image }}
       - extras=s3-cache
 
     steps:
@@ -45,16 +45,14 @@ jobs:
       - uses: taiki-e/install-action@nextest
 
       - name: Set CPU tests environment variables
-        if: matrix.config.family != 'g6.xlarge'
+        if: ${{ !contains(matrix.platform.runner, 'gpu') }}
         run: |
           echo "NEXTEST_ENV=" >> $GITHUB_ENV
           echo "NEXTEST_ARGS=--cargo-profile fast --features parallel" >> $GITHUB_ENV
 
       - name: Check CUDA status and set environment variables
-        if: matrix.config.family == 'g6.xlarge'
+        if: contains(matrix.platform.runner, 'gpu')
         run: |
-          nvidia-smi
-          nvidia-smi -L
           nvcc --version
 
           echo "NEXTEST_ENV=CUDA_OPT_LEVEL=1" >> $GITHUB_ENV
@@ -63,21 +61,22 @@ jobs:
       - name: Run tests for primitives
         working-directory: crates/circuits/primitives
         run: |
-          ${{ env.NEXTEST_ENV }} cargo nextest run ${{ env.NEXTEST_ARGS }} 
+          ${{ env.NEXTEST_ENV }} cargo nextest run ${{ env.NEXTEST_ARGS }}
 
       - name: Run tests for poseidon2-air
         working-directory: crates/circuits/poseidon2-air
         run: |
-          ${{ env.NEXTEST_ENV }} cargo nextest run ${{ env.NEXTEST_ARGS }} 
+          ${{ env.NEXTEST_ENV }} cargo nextest run ${{ env.NEXTEST_ARGS }}
 
+        # No gpu tests in these crates
       - name: Run tests for sha256-air
-        if: matrix.config.family != 'g6.xlarge'
+        if: ${{ !contains(matrix.platform.runner, 'gpu') }}
         working-directory: crates/circuits/sha256-air
         run: |
           ${{ env.NEXTEST_ENV }} cargo nextest run ${{ env.NEXTEST_ARGS }}
 
       - name: Run tests for mod-builder
-        if: matrix.config.family != 'g6.xlarge'
+        if: ${{ !contains(matrix.platform.runner, 'gpu') }}
         working-directory: crates/circuits/mod-builder
         run: |
           ${{ env.NEXTEST_ENV }} cargo nextest run ${{ env.NEXTEST_ARGS }}
