--- a/.github/workflows/benchmark-call.yml
+++ b/.github/workflows/benchmark-call.yml
@@ -64,7 +64,7 @@ on:
         type: string
         required: false
         description: Runner config as JSON, use {"family":"g6.2xlarge","image":"ubuntu24-gpu-x64"} for GPU
-        default: '{"family":"c7g.16xlarge","image":"ubuntu24-full-arm64"}'
+        default: '{"family":"g6.2xlarge","image":"ubuntu24-gpu-x64"}'
       memory_allocator:
         type: string
         required: false
@@ -103,6 +103,7 @@ on:
         type: string
         required: false
         description: Host features, comma separated (aggregation,perf-metrics)
+        default: cuda
 
 env:
   S3_METRICS_PATH: s3://openvm-public-data-sandbox-us-east-1/benchmark/github/metrics
