--- a/.github/workflows/benchmark-call.yml
+++ b/.github/workflows/benchmark-call.yml
@@ -7,11 +7,12 @@ on:
         type: string
         required: true
         description: The name of the benchmark to run
+        default: fibonacci
       runner:
         type: string
         required: false
         description: Runner config as JSON, use {"family":"g6.2xlarge","image":"ubuntu24-gpu-x64"} for GPU
-        default: '{"family":"c7g.16xlarge","image":"ubuntu24-full-arm64"}'
+        default: '{"family":"g6.2xlarge","image":"ubuntu24-gpu-x64"}'
       memory_allocator:
         type: string
         required: false
@@ -50,6 +51,7 @@ on:
         type: string
         required: false
         description: Host features, comma separated (aggregation,perf-metrics)
+        default: cuda
   workflow_call:
     inputs:
       benchmark_name:
