--- a/.github/workflows/riscv.yml
+++ b/.github/workflows/riscv.yml
@@ -6,8 +6,12 @@ on:
   pull_request:
     branches: ["**"]
     paths:
+      - "crates/circuits/primitives/**"
       - "crates/vm/**"
       - "crates/toolchain/**"
+      - "extensions/rv32im/circuit/**"
+      - "extensions/rv32im/transpiler/**"
+      - "extensions/rv32im/guest/**"
       - "Cargo.toml"
       - ".github/workflows/riscv.yml"
 
@@ -23,71 +27,63 @@ jobs:
   riscv-test-vector:
     strategy:
       matrix:
-        riscv:
-          - { name: "rv32im", path: "rv32im", family: "c7g", image: "ubuntu24-full-x64" }
-          - { name: "rv32im", path: "rv32im", family: "g4dn+g5+g6", image: "ubuntu24-gpu-x64" }
-      # Ensure tests run in parallel even if one fails
-      fail-fast: false
+        platform:
+          - { runner: "64cpu-linux-arm64", image: "arm64-rust-riscv-dev-32gb" }
+          - { runner: "test-gpu-nvidia", image: "ubuntu24-gpu-x64" }
 
     runs-on:
       - runs-on=${{ github.run_id }}
-      - family=${{ matrix.riscv.family }}
-      - image=${{ matrix.riscv.image }}
-      - tag=riscv-${{ matrix.riscv.name }}
+      - runner=${{ matrix.platform.runner }}
+      - image=${{ matrix.platform.image }}
+      - tag=riscv-${{ matrix.platform.runner }}
       - extras=s3-cache
 
     steps:
-      - uses: runs-on/action@v1
-      - uses: actions/checkout@v4
-      - uses: dorny/paths-filter@v3
-        id: filter
-        with:
-          filters: |
-            - "crates/vm/**"
-            - "crates/toolchain/**"
-            - "Cargo.toml"
-            - ".github/workflows/riscv.yml"
-      - name: Skip if no changes
-        if: steps.filter.outputs.matched == 'false'
-        run: |
-          echo "No relevant changes, skipping tests."
-          exit 0
-
+      - uses: runs-on/action@v2
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
         with:
           cache-on-failure: true
       - uses: taiki-e/install-action@nextest
-
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
         with:
           submodules: recursive
 
       - name: Check CUDA status and set environment variables
-        if: contains(matrix.riscv.family, 'g6')
+        if: contains(matrix.platform.runner, 'gpu')
         run: |
-          nvidia-smi
-          nvidia-smi -L
           nvcc --version
 
           echo "FEATURE_ARGS=--features=cuda" >> $GITHUB_ENV
-          echo "CIRCUIT_TEST_ENV=CUDA_OPT_LEVEL=1" >> $GITHUB_ENV
-      
+          echo "CIRCUIT_TEST_ENV=CUDA_OPT_LEVEL=3" >> $GITHUB_ENV
+
       - name: Download and install risc64-elf-gcc
+        if: contains(matrix.platform.image, 'x64')
         working-directory: ${{ github.workspace }}
         run: |
+          # Download pre-built binary for x86
           wget -O gcc.tar.xz "https://github.com/riscv-collab/riscv-gnu-toolchain/releases/download/2025.07.16/riscv64-elf-ubuntu-24.04-gcc-nightly-2025.07.16-nightly.tar.xz"
           tar -xJf gcc.tar.xz
           echo "$GITHUB_WORKSPACE/riscv/bin" >> $GITHUB_PATH
           rm gcc.tar.xz
+      - name: Download and install risc64-elf-gcc
+        if: matrix.platform.image == 'arm64-rust-riscv-dev-32gb'
+        run: | # custom image has riscv-gnu-toolchain binary pre-built
+          echo "/opt/riscv/bin" >> $GITHUB_PATH
 
       - name: Run Makefile
         working-directory: crates/toolchain/tests/rv32im-test-vectors
         run: |
           make
 
+        # Run execution tests on CPU, full prover tests on GPU
       - name: Run RISC-V test vector tests
         working-directory: crates/toolchain/tests
         run: |
           rustup component add rust-src --toolchain nightly-2025-02-14
-          cargo nextest run riscv_vector --cargo-profile=fast --run-ignored all ${{ env.FEATURE_ARGS }}
+          if [[ ${{ matrix.platform.runner }} == *"gpu"* ]]; then
+            TEST_NAME=test_rv32im_riscv_vector_prove
+          else
+            TEST_NAME=test_rv32im_riscv_vector_runtime
+          fi
+          ${{ env.CIRCUIT_TEST_ENV }} cargo nextest run --cargo-profile=fast --run-ignored only -- $TEST_NAME ${{ env.FEATURE_ARGS }}
