--- a/.github/workflows/riscv.yml
+++ b/.github/workflows/riscv.yml
@@ -54,7 +54,7 @@ jobs:
         run: |
           nvcc --version
 
-          echo "FEATURE_ARGS=--features=cuda" >> $GITHUB_ENV
+          echo "FEATURE_ARGS=--features=cuda,touchemall" >> $GITHUB_ENV
           echo "CIRCUIT_TEST_ENV=CUDA_OPT_LEVEL=3" >> $GITHUB_ENV
 
       - name: Download and install risc64-elf-gcc
