--- a/guest-libs/keccak256/Cargo.toml
+++ b/guest-libs/keccak256/Cargo.toml
@@ -27,4 +27,5 @@ eyre = { workspace = true }
 tiny-keccak = { workspace = true }
 
 [features]
+# Internal feature for testing only.
 cuda = ["openvm-keccak256-circuit/cuda"]
