--- a/guest-libs/ruint/Cargo.toml
+++ b/guest-libs/ruint/Cargo.toml
@@ -151,7 +151,6 @@ alloc = [
     "valuable?/alloc",
     "zeroize?/alloc",
 ]
-cuda = ["openvm-bigint-circuit/cuda"]
 
 # nightly-only features
 nightly = []
@@ -186,6 +185,9 @@ sqlx = ["dep:sqlx-core", "std", "dep:thiserror"]
 subtle = ["dep:subtle"]
 valuable = ["dep:valuable"]
 zeroize = ["dep:zeroize"]
+
+# Internal feature for testing only.
+cuda = ["openvm-bigint-circuit/cuda"]
 
 [package.metadata.cargo-shear]
 ignored = ["criterion", "hex"]
