--- a/guest-libs/ff_derive/Cargo.toml
+++ b/guest-libs/ff_derive/Cargo.toml
@@ -24,7 +24,7 @@ syn = { version = "1", features = ["full"] }
 [dev-dependencies]
 openvm-instructions = { workspace = true }
 openvm-stark-sdk = { workspace = true }
-openvm-circuit = { workspace = true, features = ["test-utils", "parallel"]}
+openvm-circuit = { workspace = true, features = ["test-utils", "parallel"] }
 openvm-transpiler = { workspace = true }
 openvm-algebra-transpiler = { workspace = true }
 openvm-algebra-circuit = { workspace = true }
@@ -37,4 +37,5 @@ num-bigint = { workspace = true }
 [features]
 # enabled when generating bitvec code utilizing the version of ff's bitvec
 bits = []
+# Internal feature for testing only.
 cuda = ["openvm-algebra-circuit/cuda"]
