--- a/guest-libs/k256/Cargo.toml
+++ b/guest-libs/k256/Cargo.toml
@@ -17,7 +17,6 @@ openvm-algebra-guest = { workspace = true }
 openvm-algebra-moduli-macros = { workspace = true }
 openvm-ecc-guest = { workspace = true }
 openvm-ecc-sw-macros = { workspace = true }
-openvm-cuda-backend = { workspace = true, optional = true }
 
 once_cell = { workspace = true, optional = true }
 elliptic-curve = { workspace = true }
@@ -58,12 +57,6 @@ std = [
     "once_cell?/std",
     "openvm-ecc-guest/std",
 ]
-cuda = [
-    "openvm-circuit/cuda",
-    "openvm-ecc-circuit/cuda",
-    "openvm-sha256-circuit/cuda",
-    "dep:openvm-cuda-backend",
-]
 arithmetic = ["elliptic-curve/arithmetic"]
 bits = ["arithmetic", "elliptic-curve/bits"]
 critical-section = ["once_cell/critical-section", "precomputed-tables"]
@@ -80,6 +73,13 @@ schnorr = ["arithmetic", "signature"]
 serde = ["ecdsa-core/serde", "elliptic-curve/serde"]
 sha256 = []
 test-vectors = []
+
+# Internal feature for testing only.
+cuda = [
+    "openvm-circuit/cuda",
+    "openvm-ecc-circuit/cuda",
+    "openvm-sha256-circuit/cuda",
+]
 
 [package.metadata.cargo-shear]
 ignored = [
