--- a/guest-libs/p256/Cargo.toml
+++ b/guest-libs/p256/Cargo.toml
@@ -17,7 +17,6 @@ openvm-algebra-guest = { workspace = true }
 openvm-algebra-moduli-macros = { workspace = true }
 openvm-ecc-guest = { workspace = true }
 openvm-ecc-sw-macros = { workspace = true }
-openvm-cuda-backend = { workspace = true, optional = true }
 
 elliptic-curve = { workspace = true, features = ["hazmat", "sec1"] }
 ecdsa-core = { version = "0.16.9", package = "ecdsa", optional = true, default-features = false, features = [
@@ -50,12 +49,6 @@ derive_more = { workspace = true, features = ["from"] }
 default = ["ecdsa"]
 alloc = ["ecdsa-core?/alloc", "elliptic-curve/alloc"]
 std = ["alloc", "ecdsa-core?/std", "elliptic-curve/std", "openvm-ecc-guest/std"]
-cuda = [
-    "openvm-circuit/cuda",
-    "openvm-ecc-circuit/cuda",
-    "openvm-sha256-circuit/cuda",
-    "dep:openvm-cuda-backend",
-]
 arithmetic = ["elliptic-curve/arithmetic"]
 bits = ["arithmetic", "elliptic-curve/bits"]
 digest = ["ecdsa-core/digest", "ecdsa-core/hazmat"]
@@ -70,6 +63,13 @@ serde = ["ecdsa-core?/serde", "elliptic-curve/serde"]
 sha256 = []
 test-vectors = []
 voprf = ["elliptic-curve/voprf"]
+
+# Internal feature for testing only.
+cuda = [
+    "openvm-circuit/cuda",
+    "openvm-ecc-circuit/cuda",
+    "openvm-sha256-circuit/cuda",
+]
 
 [target.'cfg(not(target_os = "zkvm"))'.dependencies]
 num-bigint = { workspace = true }
