--- a/.github/workflows/guest-lib-tests.yml
+++ b/.github/workflows/guest-lib-tests.yml
@@ -41,12 +41,14 @@ jobs:
           - { runner: "test-gpu-nvidia", image: "ubuntu24-gpu-x64" }
       # Ensure tests run in parallel even if one fails
       fail-fast: false
+      # For GPU platform, run jobs sequentially due to capacity constraints
+      max-parallel: ${{ matrix.platform.runner == 'test-gpu-nvidia' && 2 || 8 }}
 
     runs-on:
       - runs-on=${{ github.run_id }}
       - runner=${{ matrix.platform.runner }}
       - image=${{ matrix.platform.image }}
-      - tag=crate-${{ matrix.crate.name }}
+      - tag=${{ matrix.platform.runner == 'test-gpu-nvidia' && 'gpu-sequential' || format('crate-{0}', matrix.crate.name) }}
       - extras=s3-cache
 
     steps:
@@ -88,4 +90,4 @@ jobs:
           if [[ "${{ matrix.crate.name }}" == "pairing" ]]; then
             PAIRING_FEATURE_ARGS="--features=bn254,bls12_381"
           fi
-          cargo nextest run --cargo-profile=fast ${{ env.FEATURE_ARGS }} $PAIRING_FEATURE_ARGS --no-tests=pass
+          cargo nextest run --cargo-profile=fast ${{ env.FEATURE_ARGS }} $PAIRING_FEATURE_ARGS --no-tests=pass --test-threads=1
