fix: more distinct ids

--- a/.github/workflows/guest-lib-tests.yml
+++ b/.github/workflows/guest-lib-tests.yml
@@ -41,14 +41,12 @@ jobs:
           - { runner: "test-gpu-nvidia", image: "ubuntu24-gpu-x64" }
       # Ensure tests run in parallel even if one fails
       fail-fast: false
-      # For GPU platform, run jobs sequentially due to capacity constraints
-      max-parallel: ${{ matrix.platform.runner == 'test-gpu-nvidia' && 2 || 8 }}
 
     runs-on:
-      - runs-on=${{ github.run_id }}
+      - runs-on=${{ github.run_id }}-guest-lib-tests-${{ github.run_attempt }}-${{ strategy.job-index }}
       - runner=${{ matrix.platform.runner }}
       - image=${{ matrix.platform.image }}
-      - tag=${{ matrix.platform.runner == 'test-gpu-nvidia' && 'gpu-sequential' || format('crate-{0}', matrix.crate.name) }}
+      - tag=guest-lib-${{ matrix.crate.name }}-${{ matrix.platform.runner }}
       - extras=s3-cache
 
     steps:
