--- a/.github/workflows/extension-tests.yml
+++ b/.github/workflows/extension-tests.yml
@@ -39,14 +39,12 @@ jobs:
           - { runner: "test-gpu-nvidia", image: "ubuntu24-gpu-x64" }
       # Ensure tests run in parallel even if one fails
       fail-fast: false
-      # For GPU platform, run jobs sequentially due to capacity constraints
-      max-parallel: ${{ matrix.platform.runner == 'test-gpu-nvidia' && 1 || 8 }}
 
     runs-on:
-      - runs-on=${{ github.run_id }}
+      - runs-on=${{ github.run_id }}-extension-tests-${{ github.run_attempt }}-${{ strategy.job-index }}
       - runner=${{ matrix.platform.runner }}
       - image=${{ matrix.platform.image }}
-      - tag=${{ matrix.platform.runner == 'test-gpu-nvidia' && 'gpu-sequential' || format('extension-{0}', matrix.extension.name) }}
+      - tag=extension-${{ matrix.extension.name }}-${{ matrix.platform.runner }}
       - extras=s3-cache
 
     steps:
