chore(cuda): migrating guest-libs (#2031)
Relates to INT-4744

- [x] - guest-libs/ruint
- [x] - guest-libs/keccak
- [x] - guest-libs/sha
- [x] - guest-libs/k256
- [x] - guest-libs/p256
- [x] - guest-libs/pairing
- [x] - guest-libs/ff_derive
- [x] - guest-libs/verify_stark

---------

Co-authored-by: stephenh-axiom-xyz <stephenh@intrinsictech.xyz>
Co-authored-by: Jonathan Wang <31040440+jonathanpwang@users.noreply.github.com>

--- a/.github/workflows/extension-tests.yml
+++ b/.github/workflows/extension-tests.yml
@@ -41,10 +41,10 @@ jobs:
       fail-fast: false
 
     runs-on:
-      - runs-on=${{ github.run_id }}
+      - runs-on=${{ github.run_id }}-extension-tests-${{ github.run_attempt }}-${{ strategy.job-index }}
       - runner=${{ matrix.platform.runner }}
       - image=${{ matrix.platform.image }}
-      - tag=extension-${{ matrix.extension.name }}
+      - tag=extension-${{ matrix.extension.name }}-${{ matrix.platform.runner }}
       - extras=s3-cache
 
     steps:
